# fractal_flame

./: pyproject.toml
src/: main.py
src/generator/: fractal_generator.py
src/model/: affine_coef.py  color.py  fractal_image.py  pixel.py  point.py  rect.py
src/processor/: image_processor.py  log_gamma_correction_image_processor.py
src/renderer/: abstract_renderer.py  multi_thread_renderer.py  single_thread_renderer.py
src/saver/: fornat_image_saver.py  image_format.py  image_saver.py
src/transforms/: affine_transformation.py  disk_transformation.py  exp_transformation.py  heart_transformation.py  hyperbolic_transformation.py  linear_transformation.py  polar_transformation.py  spherical_transformation.py  transformation.py
src/ui/: command_line_args.py
src/utils/: random_utils.py
tests/transforms/: conftest.py  test_affine_transform.py  test_disk_transfrom.py  test_exp_transform.py  test_heart_transform.py  test_hyper_transform.py  test_lin_transform.py  test_polar_transform.py  test_spher_transform.py
